<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cosnstr_layout_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_background_2"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.drops.c3p0.legendenvonandor.activity.MainActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_title"
            android:layout_width="244dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/descImgTitle"
            android:scaleType="fitStart"
            app:srcCompat="@mipmap/img_andor_headline" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:id="@+id/img_parting1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_partingline_disc"
                android:scaleType="center"
                app:srcCompat="@mipmap/parting_line_green" />

            <ImageButton
                android:id="@+id/imgButtonLegends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/descImgButtonLegends"
                android:padding="0dp"
                android:scaleType="fitStart"
                app:srcCompat="@mipmap/imgbutton_legends" />

            <ImageView
                android:id="@+id/img_parting2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_partingline_disc"
                android:scaleType="center"
                app:srcCompat="@mipmap/parting_line_green" />

            <ImageButton
                android:id="@+id/imgButtonMusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/descImgButtonMusic"
                android:padding="0dp"
                android:scaleType="fitStart"
                app:srcCompat="@mipmap/imgbutton_music" />

            <ImageView
                android:id="@+id/img_parting3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_partingline_disc"
                android:scaleType="center"
                app:srcCompat="@mipmap/parting_line_green" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_anchor="@+id/linearLayout"
                app:layout_anchorGravity="left|bottom">

                <Button
                    android:id="@+id/buttonDummyOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_dummy" />

                <Button
                    android:id="@+id/buttonStartMusic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/descStartMusic" />

                <Button
                    android:id="@+id/buttonStopMusic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/descStopMusic" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>
